--- a/PageTheScroll/Base.lproj/Main.storyboard
+++ b/PageTheScroll/Base.lproj/Main.storyboard
@@ -1,14 +1,18 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="PageTheScroll" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +20,56 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Sky" translatesAutoresizingMaskIntoConstraints="NO" id="Elh-Sh-pf2">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Sun" translatesAutoresizingMaskIntoConstraints="NO" id="Bu4-Ru-SgX">
+                                <rect key="frame" x="229" y="28" width="146" height="128"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="dVI-aQ-EEC"/>
+                                    <constraint firstAttribute="width" constant="146" id="weF-uj-cYm"/>
+                                </constraints>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Mountains" translatesAutoresizingMaskIntoConstraints="NO" id="kUy-hE-Byw">
+                                <rect key="frame" x="0.0" y="477" width="375" height="190"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="190" id="DCD-op-Dgs"/>
+                                </constraints>
+                            </imageView>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5us-7W-939">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </scrollView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="5us-7W-939" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="A77-sW-gI0"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="kUy-hE-Byw" secondAttribute="bottom" id="GuU-yb-k6Q"/>
+                            <constraint firstItem="5us-7W-939" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="Meg-H3-jsw"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="5us-7W-939" secondAttribute="bottom" id="PGB-c9-2eL"/>
+                            <constraint firstItem="Elh-Sh-pf2" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="QuU-Tg-BIe"/>
+                            <constraint firstItem="kUy-hE-Byw" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="RAr-mI-DkI"/>
+                            <constraint firstAttribute="trailing" secondItem="Elh-Sh-pf2" secondAttribute="trailing" id="Yea-1I-HCq"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="Elh-Sh-pf2" secondAttribute="bottom" id="dfx-uc-hyl"/>
+                            <constraint firstAttribute="trailing" secondItem="Bu4-Ru-SgX" secondAttribute="trailing" id="i0J-TZ-cvL"/>
+                            <constraint firstAttribute="trailing" secondItem="kUy-hE-Byw" secondAttribute="trailing" id="kXD-L4-MXi"/>
+                            <constraint firstItem="Bu4-Ru-SgX" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" id="nF5-Hd-cs8"/>
+                            <constraint firstAttribute="trailing" secondItem="5us-7W-939" secondAttribute="trailing" id="re9-TG-zDp"/>
+                            <constraint firstItem="Elh-Sh-pf2" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="z68-BV-NJG"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="scrollView" destination="5us-7W-939" id="YNt-C8-AuO"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="117.59999999999999" y="123.68815592203899"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Mountains" width="375" height="100"/>
+        <image name="Sky" width="375" height="667"/>
+        <image name="Sun" width="53" height="53"/>
+    </resources>
 </document>
